[package]
name = "uninews"
version = "0.44.0"
edition = "2021"
authors = ["Angel Leon <gubatron@gmail.com>"]
description = "A universal news scraper for extracting content from various news blogs and news sites."
license = "MIT"
repository = "https://github.com/CloudLLM-ai/uninews"


[dependencies]
tokio = { version = "1.53.1", features = ["full"] }
cloudllm = "0.15.10"
reqwest = { version = "0.13.4", features = ["json"] }
scraper = "0.27.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
clap = { version = "4.6.4", features = ["derive"] }
